--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,22 +1,22 @@
 // abstract import
-@import "./abstract/functions";
-@import "./abstract/mixins";
-@import "./abstract/variables";
+@import './abstract/functions';
+@import './abstract/mixins';
+@import './abstract/variables';
 
 // base import
-@import "./base/animations";
-@import "./base/base";
-@import "./base/typography";
-@import "./base/utililites";
+@import './base/animations';
+@import './base/base';
+@import './base/typography';
+@import './base/utililites';
 
 // components import
-@import "./components/buttons";
-@import "./components/composition";
+@import './components/buttons';
+@import './components/composition';
 
 // layout import
-@import "./layout/grid";
-@import "./layout/header";
+@import './layout/grid';
+@import './layout/header';
 
 //page import
 
-@import "./pages/home";
+@import './pages/home';
