--- a/CSS/main.css
+++ b/CSS/main.css
@@ -190,19 +190,19 @@ body {
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 4rem; }
+      margin-right: 6rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 4rem) / 2); }
+    width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - 2 * 4rem) / 3); }
+    width: calc((100% - 2 * 6rem) / 3); }
   .row .col-2-of-3 {
-    width: calc((100% - 2 * 4rem) / 3 * 2 + 4rem); }
+    width: calc((100% - 2 * 6rem) / 3 * 2 + 6rem); }
   .row .col-1-of-4 {
-    width: calc((100% - 3 * 4rem) / 4); }
+    width: calc((100% - 3 * 6rem) / 4); }
   .row .col-2-of-4 {
-    width: calc((100% - 3 * 4rem) / 4 * 2 + 4rem); }
+    width: calc((100% - 3 * 6rem) / 4 * 2 + 6rem); }
   .row .col-3-of-4 {
-    width: calc((100% - 3 * 4rem) / 4 * 3 + 4rem * 2); }
+    width: calc((100% - 3 * 6rem) / 4 * 3 + 6rem * 2); }
   .row::after {
     content: "";
     clear: both;
@@ -233,3 +233,8 @@ body {
 .section-about {
   background-color: #f7f7f7;
   margin-top: -20vh; }
+
+.section-features {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.4), #28b485), url(../images/nat-4.jpg);
+  padding: 20rem 0; }
