--- a/SCSS/base/_base.scss
+++ b/SCSS/base/_base.scss
@@ -1,15 +1,16 @@
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-html {
-  font-size: 62.5%;
-}
+*::after,*::before{
 
-body {
-  padding: 2rem;
-  box-sizing: border-box;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+    
+    }
+    html{
+        font-size: 62.5%;
+      
+    }
+    body{
+        padding: 1rem;
+        box-sizing: border-box
+    }
