--- a/SCSS/components/_buttons.scss
+++ b/SCSS/components/_buttons.scss
@@ -1,73 +1,72 @@
-.btn {
-  &:link {
-    display: inline-block;
-    border-radius: 100px;
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 15px 40px;
-    position: relative;
-    transition: all 0.3s;
-  }
-
-  &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
+.btn{
+    &:link{
+        display: inline-block;
+        border-radius: 100px;
+        text-decoration: none;
+        text-transform: uppercase;
+        padding:15px 40px;
+        position: relative;
+        transition: all 0.3s;
     }
-  }
+    &:hover{
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        &::after{
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
+    }
+    &:active{
+        transform: translateY(-1px);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    &::after{
+        content:'';
+         display: inline-block;
+         height: 100%;
+         width: 100%;
+         border-radius: 100px;
+         position: absolute;
+         top:0;
+         left: 0;
+         z-index: -1;
+         transition: all 0.4s;
 
-  &:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  }
+        }
+        &--white{
+            background-color: #fff;
+            color:#777;
 
-  &::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
+            &::after{
+                background-color: #fff;
+            }
+        }
+        &--animated{
+            animation: MoveInBottom 0.5s ease-out 0.75s;
+            animation-fill-mode: backwards;
+        }
 }
+.btn-text{
 
-.btn--white {
-  background-color: #fff;
-  color: #777;
+    &:link{
+        display: inline-block;
+        text-decoration: none;
+        font-size: 1.6rem;
+        display: inline-block;
+        border-bottom: 1px solid $color_primary;
+        color:$color_primary;
+        padding: 3px;
 
-  &::after {
-    background-color: #fff;
-  }
-}
-
-.button-text {
-  &:link {
-    font-size: 1.6rem;
-    color: $color_primary;
-    text-decoration: none;
-    display: inline-block;
-    padding: 3px;
-    border-bottom: 1px solid $color_primary;
-
-  }
-
-  &:hover {
-    background-color: $color_primary;
-    color: $color_white;
-    box-shadow: 0 1rem 2rem rgba($color_black, 0.15);
-    transform: translateY(-2px);
-    border-radius: 8px;
-  }
-
-  &:active {
-    box-shadow: 0 0.5rem 1rem rgba($color_black, 1.15);
-    transform: translateY(0);
-  }
+    }
+    &:hover{
+        background-color: $color_primary;
+        color:$color_white;
+        box-shadow: 0 1rem 2rem rgba($color_black, 0.6);
+        transform: translateY(-3px);
+    }
+    &:active{
+        transform: translateY(0);
+        box-shadow: 0 0.5rem 1rem rgba($color_black, 0.6);
+    }
 }
